fix some spacing and start Simplify Aeries integration

--- a/newtab.css
+++ b/newtab.css
@@ -135,12 +135,21 @@ div.flex-parent > .flex-box {
 .flex-box.calender {
   min-width: 15rem;
   max-width: 30rem;
-  height: 10rem;
+  height: 12rem !important;
   padding: 0.5rem !important;
+  display: inline-flex !important;
+  flex-direction: row !important;
+  flex-wrap: nowrap !important;
+}
+.flex-box.calender > div {
+  flex-wrap: nowrap !important;
+  flex-flow: nowrap !important;
 }
 .calendar.bell {
   background: #efefef !important;
-  width: 45%;
+  flex-basis: 7rem !important;
+  flex-grow: 0 !important;
+  flex-shrink: 1;
   height: 100%;
   border-radius: 1.2rem;
 }
@@ -148,11 +157,33 @@ div.flex-parent > .flex-box {
   color: #434343;
   position: relative;
   font-size: 5rem;
+  height: 5rem !important;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+.calendar.events {
+  flex-basis: 10rem;
+  flex-grow: 1;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  height: fit-content;
+  vertical-align: middle !important;
+  text-align: center !important;
+  display: block !important;
+  margin: 0.5rem !important;
+  margin-right: 0px !important;
+}
+.calendar.event-break {
+  height: 1rem !important;
+  width: 100%;
+}
+.calendar.events .calendar.event {
+  margin-bottom: 0.3rem;
+  height: fit-content;
+  width: 100%;
+}
 .flex-box,
 .flex-parent {
   flex-flow: row !important;
@@ -176,7 +207,7 @@ div.flex-parent > .flex-box {
 }
 .flex-box.spotify > iframe {
   height: 100% !important;
-  border-radius: 1.5rem;
+  border-radius: 1.3rem;
   width: -webkit-fill-available;
   height: 100%;
 }
@@ -194,3 +225,12 @@ div.flex-parent > .flex-box {
   }
 }
 */
+.flex-box.simplify-aeries {
+  height: 30rem !important;
+  flex-basis: 40rem !important;
+  flex-grow: 1 !important;
+}
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
